--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
-/* TODO */
-
 ul {
     list-style-type: none;
 }
 
 .kafelek {
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
     padding: 16px;
     border-radius: 5px;
     float: left;
+    background-color: white;
+    opacity: 70%; 		/*przy zmianie trybu bedzie przepuszczal szare tlo*/
 }
 
 /*  po najechaniu na kafelek sie powieksza */
@@ -57,6 +57,7 @@ ol > li {
 
 /* slider - tryb nocny/dzienny za */
 /* https://www.w3schools.com/howto/howto_css_switch.asp */
+/* minimalnie zmodyfikowane */
 
 /* The switch - the box around the slider */
 .switch {
@@ -81,7 +82,7 @@ ol > li {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #ffd700;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -99,7 +100,7 @@ ol > li {
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #000080;
 }
 
 input:focus + .slider {
@@ -126,5 +127,5 @@ p.tryb {
 }
 
 .tryb_nocny {
-    background-color: gray;
+    background-color: lightgray;
 }
