Zmiana pozycji slidera (bottom: 15px;) aby lepiej pasowal do pozycji ikonek slonca i ksiezyca

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ ol > li {
   display: inline-block;
   width: 60px;
   height: 34px;
+  bottom: 15px; /*zmieniono pozycje slidera aby lepiej pasowal do poziomu ikonek slonca i ksiezyca*/
 }
 
 /* Hide default HTML checkbox */
