Dodano ostylowania do przyciskow i selecta, kursor zmienia sie w pointer ('raczka'). Testowac.

--- a/styles.css
+++ b/styles.css
@@ -140,3 +140,12 @@ img {
     height: 60px;
     width: 60px;
 }
+
+/* ponizej aby na elementach klikalnych kursor zmienial sie w pointer ('raczka') */
+select {
+    cursor: pointer;
+}
+
+input[type=button] {
+    cursor: pointer;
+}
