Ok, przejrzalem, dodalem komentarze, chyba powinno dzialac tak jak trzeba.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* testowano na LinuxMint 19.1 Cinammon */
+/* przegladarki Firefox 71.0 i Chromium 79.0 */
+
+
 /* strona jest robiona tylko na mojego lapka (zadnego RWD) */
 ul {
     list-style-type: none;
